# Emotions-Dashboard

./: .gitignore  2026-02-11 15-31.csv  README.md  Veeresh  __s1.py  __tmp_check.py  __tmp_s1.py  __tmp_script1.py  mini_militia_inspired_eeg_design.md  mini_militia_inspired_eeg_game.py  run_dashboard.ps1  setup_windows.ps1
Capsule Latest/: neiry_headband.py  (+1 more)
Emotions-Dashboard/bci_dashboard/: main.py  pyproject.toml  requirements.txt
Emotions-Dashboard/bci_dashboard/calibration/: calibration_manager.py  calibration_store.py
Emotions-Dashboard/bci_dashboard/calibration_data/: cal_820628.json  cal_SER456.json
Emotions-Dashboard/bci_dashboard/capsule_sdk/: Calibrator.py  DeviceLocator.py  EEGTimedData.py  Emotions.py  PSDData.py  Productivity.py
Emotions-Dashboard/bci_dashboard/classifiers/: cardio_handler.py  emotions_handler.py  physio_handler.py  productivity_handler.py
Emotions-Dashboard/bci_dashboard/data/: neuroflow_apps.json
Emotions-Dashboard/bci_dashboard/device/: capsule_bridge.py  device_manager.py  scan_helper.py
Emotions-Dashboard/bci_dashboard/gui/: _wv2_host.py  aim_trainer.py  bci_mouse_controller.py  bci_music_dj.py  brain_speller.py  calibration_screen.py  connection_screen.py  dashboard_screen.py  focus_timer.py  games_screen.py  games_window.py  graph_window_manager.py  instagram_screen.py  main_window.py  mems_screen.py  metric_graph_windows.py  mind_maze_controller.py  multiplayer_bubble_battle.py  multiplayer_game_screen.py  multiplayer_lobby.py  multiplayer_maze_race.py  multiplayer_space_duel.py  multiplayer_tug_of_war.py  neuro_art_canvas.py  neuro_journal.py  neuroflow_runtime.py  neuroflow_training_page.py  phaseon_screen.py  screen_router.py  sessions_screen.py  signal_dispatcher.py  training_audio.py  training_games.py  training_games_arcade.py  training_games_base.py  training_games_meditation.py  training_games_memory.py  training_screen.py  youtube_screen.py
(+578 files in other folders)
