[project]
name = "bci-dashboard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "pywebview>=6.1",
    "pyqtgraph>=0.13",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyserial>=3.5",
    "h5py>=3.10",
    "mne>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
